[package]
name = "notajobboard-api-hyper"
version = "0.1.0"
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "=0.13.0-alpha.1"
tokio = "0.2.0-alpha.4"
pretty_env_logger = "0.3"
futures-util-preview = { version = "=0.3.0-alpha.18" }
dotenv = "0.14.1"
log = "0.4.1"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
lazy_static = "1.3.0"
regex = "1.0"

chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
r2d2 = "0.8.5"
postgres = "0.15.1"

#errors
snafu = "0.4.3"

# user_register
argonautica = "0.2.0"
jsonwebtoken = "6.0.1"
secp256k1 = {version = "0.16.0", features = ["rand","serde"]}
rand = "0.6"
rust-crypto = "^0.2"
bytes = "0.4.12"
base64 = "0.11.0"
headers=  "0.2.3"